--- a/project/assets/css/petition_style.css
+++ b/project/assets/css/petition_style.css
@@ -47,6 +47,9 @@
     height: 30px;
     margin-left: 10px;
 }
+.petition_to{
+    margin-left: 5%;
+}
 .basic{
     margin-left: -5px;
     padding-left: -5px;
