--- a/project/assets/css/Register_page_style.css
+++ b/project/assets/css/Register_page_style.css
@@ -53,7 +53,9 @@ header{
 *{
     outline:none;
     box-sizing:border-box;
-    font-family:'Poppins', sans-serif;
+    
+    
+    
   }
   body{
       margin:0px;
@@ -112,6 +114,8 @@ header{
       color:white;
   }
   .container{
+      font-family: 'Rajdhani', sans-serif;
+      font-size: larger;
       position:absolute;
       top:50%;
       left:50%;
@@ -126,6 +130,7 @@ header{
       width:50vh;
   }
   .container .text{
+      
       font-size:30px;
       font-weight:600;
       text-align:center;
@@ -138,6 +143,7 @@ header{
       padding-bottom:30px;
   }
   .container .input{
+    
       padding:10px;
   }
   .or{
@@ -155,41 +161,21 @@ header{
       font-size:17px;
       border:1px solid lightgrey;
   }
-  form .btn{
-      margin-top:10px;
-      height:40px;
-      width:100%;
-      position:relative;
-      overflow:hidden;
-      font-size:17px;
-      border:1px solid lightgrey;
-      width:50%;
-      margin-left: 90px;
-  }
-  form .btn .inner{
-      height:100%;
-      width:400px;
-      position:absolute;
-      background-color:black;
-      z-index:-1;
-  }
-  form .btn button{
-      height:100%;
-      width: 80%;
-      background:none;
-      border:none;
-      color:#fff;
-      font-size:18px;
-      font-weight:500;
-      text-transform:uppercase;
-      letter-spacing:1px;
-      text-align:center;
-      margin-left:-75px;
-  }
-  .REGISTER_PAGE_MAIN{
+  .create_account button{
+    margin-top: 10px;
+    width: 150px;
+    height: 30px;
+    margin-left: 90px;
+    background-color: black;
+}
+  .create_account{
+    font-size: large;
     text-decoration: none;
-    color: #fff;
-  }
+    list-style:none ;
+    color: white; 
+    font-family: 'Rajdhani', sans-serif;
+}
+
   div.container-content{
       text-align:center;
       margin-top:10px;
@@ -197,6 +183,10 @@ header{
   div.container-content a{
       text-decoration:none;
   }
+  .placeholder{
+    font-family: 'Rajdhani', sans-serif;
+  }
   .footer{
     margin-top:50%;
   }
+  
