--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -1,6 +1,7 @@
 *{
     margin-left:0px;
     margin-right: 0px;
+    
 }
 header{
     display:flex;
@@ -49,15 +50,20 @@ header{
 .login_register{
     text-decoration: none;
     margin-top: auto;
+    margin-bottom: 10px;
 }
 .login{
     margin-right:30px;
+    font-size: x-large;
+    font-family: 'Rajdhani', sans-serif;
 }
 .section_background{
     background-image:url(../images/donation-banner.jpg) ;
     height:700px;
     display: flex;
     margin:0px;
+    font-family: 'Yeseva One', cursive;
+   
 }
 .section {
     margin: auto;
@@ -66,19 +72,20 @@ header{
 .section_h1 {
     font-size: 3.5pc;
     
+  
 }
 .section_h1_sub{
     font-size:1cm;
-    margin-left: 14pc;
+    margin-left: 7pc;
 }
 .slogan{
     margin-left: 15px;
 }
 .section_h2 {
-    margin-left: 20pc;
+    margin-left: 15pc;
 }
 .button_P_F{
-    margin-left: 25pc;
+    margin-left: 22pc;
    
 }
 .Button_petition{
@@ -94,7 +101,7 @@ header{
 }
 .Button_fundraiser{
     background-color:gray ;
-    margin-left:10px;
+    margin-left: 13px;
     height:1cm;
     text-decoration: none;
     color:white;
@@ -205,14 +212,13 @@ header{
     font-size: 1.5pc;
     
 }
-.choise_name:hover{
-    color: white;
-    transform: scale(1.5);
-   
-}
+
 .choise:hover {
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     transform: scale(1.05);
+}
+.choise_name{
+    color: white;
 }
 .animal_welfare{
     display:flex;
@@ -252,6 +258,7 @@ header{
     justify-content: center;
     border-color: 1px solid gray;
     background-image: url(../images/medical-clinic.jpg);
+    background-size: 100% 100%;
     width:250px;
     height:150px;
     margin-top:50px;
