--- a/project/assets/css/Inside_profile_style.css
+++ b/project/assets/css/Inside_profile_style.css
@@ -45,6 +45,16 @@ header{
 .login_register{
     text-decoration: none;
     margin-top: auto;
+    margin-bottom: 10px;
+    margin-right:30px;
+    font-size: x-large;
+    font-family: 'Rajdhani', sans-serif;
+    color:tomato;
+}
+
+.login_register{
+    text-decoration: none;
+    margin-top: auto;
 }
 .login{
     margin-right:30px;
