crested new html's

--- a/project/assets/css/Register_page_style.css
+++ b/project/assets/css/Register_page_style.css
@@ -64,58 +64,8 @@ header{
       margin:0px;
       padding:0px;
   }
-  body{
-      
-      background-repeat:no-repeat;
-      background-attachment:fixed;
-      background-size:120%;
-      height:100vh;
-  }
-  .header{
-      display:flex;
-      flex-direction:row;
-      flex-wrap:wrap;
-      justify-content:space-between;
-      align-items:space-between;
-      margin-left:5px;
-      margin-right:5px;
-      background-color:#2a2727;
-  }
-  .navbar  ul li{
-      display:inline;
-      margin-top:0px;
-      padding-top:35px;
-      padding-left:60px;
-      padding-right:40px;
-  }
-  .navbar ul li a{
-    color:white;
-    text-decoration:none;
-    font-size:20px;
-    text-align:center;
-  }
-  .logo-img{
-      margin-top:2px;
-      height:60px;
-      width:180px;
-     padding:5px;
-     margin-left:2px;
-  }
-  .header .inner{
-      margin-top:20px;
-      margin-right:20px;
-      margin-bottom:5px;
-      padding:2px;
-  }
-  .header button{
-      background-color:#2a2727;
-      border-color:transparent;
-      font-size:15px;
-  }
-  .header button a{
-      text-decoration:none;
-      color:white;
-  }
+ 
+  
   .container{
       font-family: 'Rajdhani', sans-serif;
       font-size: larger;
@@ -124,7 +74,6 @@ header{
       left:50%;
       transform:translate(-50%, -50%);
       background:#fff;
-      width:410px;
       padding-left:50px;
       padding-right:40px;
       padding-top:60px;
@@ -145,9 +94,11 @@ header{
       text-align:center;
       padding-bottom:30px;
   }
-  .container .input{
-    
-      padding:10px;
+  .input{
+    margin: 10px;
+    padding: 5px;
+    color: solid black;
+    font-weight: bold;
   }
   .or{
     margin:150px;
@@ -158,7 +109,7 @@ header{
     margin-left:10px;
   }
   form .data input{
-      height:8%;
+      height:40px;
       width:100%;
       padding-left:10px;
       font-size:17px;
