--- a/project/assets/css/Main_page_style.css
+++ b/project/assets/css/Main_page_style.css
@@ -237,3 +237,69 @@ header{
     height:150px;
     margin-top:50px;
 }
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: tomato}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .progressa {
+    border-radius: 0px !important;
+    margin-left: 10px;
+    margin-right:10px ;
+    overflow: hidden;
+    margin-bottom: 20px;
+    background-color: rgba(0,0,0,0.5);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+    line-height: 16px;
+    height: 15px;
+    font-size: 15px;
+    
+}
+.progressab {
+    background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
+    background-image: -o-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
+    -webkit-background-size: 40px 40px;
+    background-size: 40px 40px;
+    -webkit-transition: width .25s ease,height .25s ease,font-size .25s ease;
+    -moz-transition: width .25s ease,height .25s ease,font-size .25s ease;
+    -ms-transition: width .25s ease,height .25s ease,font-size .25s ease;
+    -o-transition: width .25s ease,height .25s ease,font-size .25s ease;
+    transition: width .25s ease,height .25s ease,font-size .25s ease;
+    width: 0;
+    color: #fff;
+    text-align: center;
+    font-family: 'Open Sans',sans-serif !important;
+	animation: progress-bar-stripes 2s linear infinite reverse;
+}
+
+@keyframes progress-bar-stripes{
+0% {
+    background-position: 40px 0;
+}
+100% {
+    background-position: 0 0;
+}
+}
+  
