--- a/project/assets/css/our_profile_style.css
+++ b/project/assets/css/our_profile_style.css
@@ -85,3 +85,47 @@
     margin-right: 5px;
     margin-top:-1px;
 }
+
+.logo_proflie {
+    background-color: tomato;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  .profile_name{
+    margin: auto;
+  }
+  .profile_logo {
+    position: relative;
+    display: inline-block;
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
