--- a/project/assets/css/login_style.css
+++ b/project/assets/css/login_style.css
@@ -93,6 +93,7 @@ header{
     border: 0px solid white;
     border-bottom: 1.5px solid gray;
     width: 230px;
+    outline: none;
     margin: 10px;
     height: 2pc;
 
