--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -192,12 +192,9 @@ header{
 .profiles_row_one{
     display: flex;
     flex-direction: row;
-}
-.profiles_row_two{
-    display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
 }
+
 .feature_heading{
     padding: 10px;
 }
@@ -344,6 +341,49 @@ header{
 .copyrights{
     margin-left: 23%;
 }
+.progressa {
+    border-radius: 0px !important;
+    margin-left: 10px;
+    margin-right:10px ;
+    overflow: hidden;
+    margin-bottom: 20px;
+    background-color: rgba(0,0,0,0.5);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+    line-height: 16px;
+    height: 15px;
+    font-size: 15px;
+    
+}
+.progressab {
+    background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
+    background-image: -o-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
+    -webkit-background-size: 40px 40px;
+    background-size: 40px 40px;
+    -webkit-transition: width .25s ease,height .25s ease,font-size .25s ease;
+    -moz-transition: width .25s ease,height .25s ease,font-size .25s ease;
+    -ms-transition: width .25s ease,height .25s ease,font-size .25s ease;
+    -o-transition: width .25s ease,height .25s ease,font-size .25s ease;
+    transition: width .25s ease,height .25s ease,font-size .25s ease;
+    width: 0;
+    color: #fff;
+    text-align: center;
+    font-family: 'Open Sans',sans-serif !important;
+	animation: progress-bar-stripes 2s linear infinite reverse;
+}
+
+@keyframes progress-bar-stripes{
+0% {
+    background-position: 40px 0;
+}
+100% {
+    background-position: 0 0;
+}
+}
+
+
+
+
+
 
 /* responsive */
 
