3 form to 1 local storage finished

--- a/project/assets/css/edit_profile.css
+++ b/project/assets/css/edit_profile.css
@@ -30,6 +30,7 @@
     border-radius: 0px;
     border-color: gray;
 }
+
 .profile_logo{
     display:flex;
     flex-direction: row;
@@ -66,3 +67,30 @@
 .copyrights{
     margin-left: 23%;
 }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: tomato}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
