--- a/project/assets/css/our_profile_style.css
+++ b/project/assets/css/our_profile_style.css
@@ -3,6 +3,19 @@
     flex-direction: column;
     
 }
+.profile_logo{
+    display:flex;
+    flex-direction: row;
+    margin:10px;
+    margin-right: 30px;
+}
+.profile_name{
+    margin:10px;
+    border-radius: 0%;
+    border-color: black;
+    color: tomato;
+}
+
 .header_1{
     display: flex;
     flex-direction: row;
@@ -33,7 +46,15 @@
     padding-left: 10%;
     padding-right: 10%;
 }
+.welcome_user_name{
+    margin-top: 25px;
+    margin-left: 5px;
+    font-size: larger;
+   
+}
 .welcome_name{
+    display: flex;
+    flex-direction: row;
     color: grey;
 
 }
@@ -94,14 +115,18 @@
     border: none;
     cursor: pointer;
   }
-  .profile_name{
-    margin: auto;
-  }
+  
   .profile_logo {
     position: relative;
     display: inline-block;
     display: flex;
     flex-direction: row;
+  }
+  
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
   }
   
   .dropdown-content {
@@ -120,12 +145,8 @@
     display: block;
   }
   
-  .dropdown-content a:hover {background-color: #f1f1f1}
+  .dropdown-content a:hover {background-color: tomato}
   
   .dropdown:hover .dropdown-content {
     display: block;
-  }
-  
-  .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
   }
