--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -89,39 +89,24 @@ header{
     color: rgba(240, 248, 255, 0.827);
 }
 .section_h2 {
-    margin-left: 15pc;
+    margin-left: 25%;
     color: rgba(240, 248, 255, 0.827);
 }
 .button_P_F{
-    margin-left: 22pc;
+    margin-left: 30%;
    
 }
-.Button_petition{
-    background-color: rgba(255, 255, 255, 0.482);
-    margin-left: 10px;
-    border-radius:0.5em;
-    border: 2px solid gray;
-    height:1cm;
-    text-decoration: none;
-    color: black;
+.Button_fundraiser{
+    background: rgba(255, 255, 255, 0.482);
+    border-radius: 40px;
+    padding: 0.3rem 5rem;
+    font-size: 20px;
+    border: 0;
+    color: #3d231c;
     transition: all 0.3s ease-in;
     cursor: pointer;
 }
-.Button_petition:hover{
-    color: black;
-    background-color: tomato;
-}
-.Button_fundraiser{
-  background-color: rgba(255, 255, 255, 0.482);
-    margin-left: 13px;
-    border-radius:0.5em;
-    border: 2px solid gray;
-    height:1cm;
-    text-decoration: none;
-    color:black;transition: all 0.3s ease-in;
-    cursor: pointer;
 
-}
 .Button_fundraiser:hover{
     color: black;
     background-color: tomato;
