--- a/project/assets/css/my_petition_style.css
+++ b/project/assets/css/my_petition_style.css
@@ -63,5 +63,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    border: 2px solid black;    
+    border: 2px solid black;  
+    margin-right: 6%;  
 }
