--- a/project/assets/css/Inside_profile_style.css
+++ b/project/assets/css/Inside_profile_style.css
@@ -77,7 +77,7 @@ header{
 .profile_row_one{
     display: flex;
     justify-content: center;
-    background-color: sandybrown;
+    background-color: #d9d4d4d2;
     color:darkslategray;
     font-size: 1pc;
     width: 98.5%;
