fix: completed request and donate module

--- a/project/assets/css/our_profile_style.css
+++ b/project/assets/css/our_profile_style.css
@@ -151,3 +151,121 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+  .popup {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+}
+.popup-content {
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888888;
+    width: 30%;
+    height: 45%;
+    font-weight: bolder;
+    box-shadow: #888888 ;
+}
+.popup-content button {
+    display: block;
+    margin: 0 auto;
+}
+.show {
+    display: block;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 10%;
+}
+.form-control{
+    margin: 10px;
+    width: 95%;
+    height: 50px;
+    font-size: 20px;
+}
+.col-md-8{
+    display: flex;
+    flex-direction: row;
+}
+
+   
+.button-79 {
+  backface-visibility: hidden;
+  background: tomato;
+  border: 0;
+  border-radius: .375rem;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular,Helvetica,sans-serif;
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: -.01em;
+  line-height: 0.3;
+  padding: 1rem 1.25rem;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transform: translateZ(0) scale(1);
+  transition: transform .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-79:disabled {
+  color: #787878;
+  cursor: auto;
+}
+
+.button-79:not(:disabled):hover {
+  transform: scale(1.05);
+}
+
+.button-79:not(:disabled):hover:active {
+  transform: scale(1.05) translateY(.125rem);
+}
+
+.button-79:focus {
+  outline: 0 solid transparent;
+}
+
+
+.button-79:focus:not(:focus-visible) {
+  outline: 0 solid transparent;
+}
+
+.button-79:not(:disabled):active {
+  transform: translateY(.125rem);
+}
+.close_btn{
+    background: none;
+    border: none;
+}
+.edit_profile_pop{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+.close_btn_img{
+    height:40px;
+    width:40px;
+    margin-left: 300%;
+    margin-top: -20px;
+}
+.edit_profile_font{
+    font-size: x-large;
+    margin-bottom: 10px;
+}
