--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -107,6 +107,10 @@ header{
     cursor: pointer;
 }
 
+.d-none{
+    display: none;
+}
+
 .Button_fundraiser:hover{
     color: black;
     background-color: tomato;
