--- a/project/assets/css/Main_page_style.css
+++ b/project/assets/css/Main_page_style.css
@@ -37,12 +37,24 @@ header{
     flex-direction: row;
     margin:10px;
     margin-right: 30px;
+    margin-top: 22px;
+}
+.LoginRegister{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-decoration: none;
+    list-style: none;
+    margin:10px;
+    
+    
 }
 .profile_name{
-    margin:10px;
+    margin:13px;
     border-radius: 0%;
     border-color: black;
-    color: tomato;
+    color: black;
+    font-weight: 900;
 }
 .user_logo {
     height:40px;
