--- a/project/assets/css/Register_page_style.css
+++ b/project/assets/css/Register_page_style.css
@@ -49,7 +49,7 @@ header{
     margin-bottom: 10px;
     margin-right:30px;
     font-size: x-large;
-    font-family: 'Rajdhani', sans-serif;
+    /* font-family: 'Rajdhani', sans-serif; */
     color:tomato;
 }
 
