--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -7,9 +7,18 @@ header{
     display:flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 20px;
-   
+    /* margin-top: 20px; */
+    margin-top: -10px;
+    background-color: white;
+    padding-top: 10px;
+    /* position: fixed;
+    top: 0;
+    width: 100%;
+    */
 }
+/* body{
+    margin-top: 90px;
+} */
 .logo{
     height:80px;
     width:150px;
@@ -42,19 +51,24 @@ header{
     justify-content: space-between;
     text-decoration: none;
     list-style: none;
-    margin:10px;
-    margin-right:30px;
+    /* margin:10px;
+    margin-right:30px; */
     padding:10px;
     
 }
 .login_register{
     text-decoration: none;
-    margin-top: auto;
+    margin-top: 1px;
     margin-bottom: 10px;
     margin-right:30px;
-    font-size: x-large;
-    font-family: 'Rajdhani', sans-serif;
-    color:tomato;
+    font-weight:900;
+    font-size: larger;
+    /* font-family: 'Rajdhani', sans-serif; */
+    font-style:inherit;
+    color:black;
+}
+.login_register:hover{
+    color: tomato;
 }
 
 .section_background{
@@ -83,6 +97,7 @@ header{
     font-size:1cm;
     margin-left: 7pc;
     color: rgba(240, 248, 255, 0.827);
+    margin-top: 5%;
 }
 .slogan{
     margin-left: 15px;
@@ -94,6 +109,7 @@ header{
 }
 .button_P_F{
     margin-left: 30%;
+    margin-top: 10%;
    
 }
 .Button_fundraiser{
@@ -290,7 +306,7 @@ header{
 }
 .footer_section1{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     background-color:black;
     margin-top: 40px;
@@ -305,9 +321,16 @@ header{
     border-radius: 1em;
 }
 .contact{
-    margin-top: 50px;
+    /* margin-top: 50px; */
     display: flex;
+    padding-left: 43%;
+    margin-bottom: 10px;
     
+}
+.con_info{
+    display: flex;
+    flex-direction: row;
+
 }
 .instagram_fb{
     
@@ -316,14 +339,36 @@ header{
 }
 .footer_contact{
     display: flex;
-    justify-content: flex-end;
-    text-decoration: none;
+    /* justify-content: flex-end; */
+    /* text-decoration: none; */
     list-style: none;
     color:white;
 }
 .footer_contact_list{
     list-style: none;
+    /* padding-right:50% ; */
+    
 }
+.aboutUS{
+    text-decoration: none;
+    color: white;
+    
+}
+.AboutUS{
+    text-decoration: none;
+    color: black;
+}
+.AboutUS:hover{
+    color: tomato;
+}
+
+.abus{
+    margin:10px;
+}
+.aboutUS:hover{
+    color: tomato;
+}
+
 .footer_section2{
     background-color: black;
     color: white;
@@ -333,6 +378,20 @@ header{
 }
 .copyrights{
     margin-left: 23%;
+    color: white;
+}
+.Disclaimer{
+    color: white;
+    font-size:12px;
+    /* padding-left: 10%;
+    padding-right: 10%; */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 10px;
+    margin-right: 10%;
+    border-top: 2px solid white;
+    margin-left: 10%;
+
 }
 .progressa {
     border-radius: 0px !important;
@@ -363,6 +422,52 @@ header{
     font-family: 'Open Sans',sans-serif !important;
 	animation: progress-bar-stripes 2s linear infinite reverse;
 }
+.dropdownn {
+    position: relative;
+    /* display: inline-block; */
+  }
+  .login_btn{
+    /* background-color: black;
+    border-radius: 0.5cm;
+    color: white;
+    width: 50%; */
+    background: white;
+    border-radius: 40px;
+    padding: 0.38rem 1rem;
+    border: solid 2px tomato;
+    transition: all 0.3s ease-in;
+    
+}
+.login_btn:hover{
+    color: white;
+    background-color: tomato;
+}
+  .dropdownn-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 140px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    margin-left: -20px;
+    font-style: normal;
+  }
+  
+  .dropdownn-content a {
+    color: black;
+    padding: 12px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdownn-content a:hover {
+    background-color: tomato;
+}
+  
+  .dropdownn:hover .dropdownn-content {
+    display:block;
+    
+  }
 
 @keyframes progress-bar-stripes{
 0% {
@@ -372,7 +477,42 @@ header{
     background-position: 0 0;
 }
 }
-
+.whychooseus_div{
+    border-bottom: black;
+    display: flex;
+    justify-content: center; 
+    margin-left: 20%;
+    margin-right: 20%;
+}
+.whyChoose_US{
+    margin-top: 100px;
+    border-bottom: 2px solid black;
+}
+.why-choose-us-box {
+    font-size: 110%;
+    text-align: center;
+    border: 1px solid #ddd;
+    padding: 20px;
+    min-height: 180px;
+    margin-bottom: 20px;
+    margin: 50px;
+    width: 200px;
+}
+.container_box{
+    display: flex;
+    flex-direction: column;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.box_column{
+    display: flex;
+    flex-direction: row;
+    /* width: 50%; */
+    align-items: center;
+    margin-left: 15%;
+}
 
 
 
